Part_3/confs/app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app: wil-app
  replicas: 1 
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
      - name: wil-app
        image: wil42/playground:v1
        ports:
        - containerPort: 80
