Part_3/confs/app-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-app
  namespace: dev
spec:
  selector:
    app: wil-app
  ports:
  - name: http
    port: 80
    targetPort: 8888
  type: ClusterIP
